# FLARE

./: .gitignore  0608.ipynb  0609-is.ipynb  0609.ipynb  0609_m.ipynb  0610 voltage.ipynb  0610.ipynb  0611-is.ipynb  0612_graph.ipynb  Hardware-Copy1-copy.ipynb  Hardware.ipynb  Untitled.ipynb  requirements.txt  unprotected_0609.ipynb
.cvenv/: pyvenv.cfg
.ipynb_checkpoints/: 0610-checkpoint.ipynb
cw305 new folder (2)/cw305 new folder/: CHANGES.txt  PA_HW_CW305_1-Attacking_AES_on_an_FPGA.ipynb  Untitled1.ipynb  clockglitch-yamini.ipynb  clockglitch_second-Copy1.ipynb  clockglitch_second.ipynb  contributing.md  glitch_metadata.json  glitchrounds-Co.ipynb  grid_sweep_results.csv  husky.ipynb  new file 0129-Copy of 28-Copy1.ipynb  new glitch-Copy2.ipynb  new glitch.rounds.ipynb  pyproject.toml  requirements.txt
cw305 new folder (2)/cw305 new folder/.ipynb_checkpoints/: clockglitch-yamini-checkpoint.ipynb  clockglitch__new-Copy1-checkpoint.ipynb  glitching1-Copy1-checkpoint.ipynb  glitchrounds-Copy1-checkpoint.ipynb  glitchrounds-checkpoint.ipynb  new file 0128-checkpoint.ipynb  new file 0129-Copy of 28-checkpoint.ipynb  new glitch-Copy1-checkpoint.ipynb  new glitch-checkpoint.ipynb
cw305 new folder (2)/cw305 new folder/New folder/: 0130-Copy1.ipynb  0130.ipynb  0131-Copy1.ipynb  0131-Copy2.ipynb  Untitled.ipynb  chipshouter.ipynb  hardware demo .ipynb  hardwarebookclockglitch-Copy1.ipynb  hardwarebookclockglitch.ipynb  labcw305.ipynb  new file 0127-Copy1.ipynb  new file 0129.ipynb  proinlab-Copy1.ipynb  proinlab.ipynb  unprotected-Copy1.ipynb  unprotected-Copy2.ipynb
(+9 files in other folders)
